--- a/.github/templates/macos_ci_workflow.yml.j2
+++ b/.github/templates/macos_ci_workflow.yml.j2
@@ -13,6 +13,14 @@ jobs:
   build:
     runs-on: !{{ runner_type }}
     steps:
+      - name: env test build
+        working-directory: pytorch/
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.SCCACHE_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SCCACHE_AWS_SECRET_ACCESS_KEY }}
+          TEST: hello
+        run: |
+          printenv | sort
       - name: Clone pytorch/pytorch
         uses: actions/checkout@v2
         with:
