--- a/.github/templates/macos_ci_workflow.yml.j2
+++ b/.github/templates/macos_ci_workflow.yml.j2
@@ -16,7 +16,7 @@ jobs:
       - name: my thing
         uses: driazati/test-action@master
         with:
-          who-to-greet: 'myself'
+          who-to-greet: 'myse2lf'
       - name: env test build
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.SCCACHE_AWS_ACCESS_KEY_ID }}
