--- a/.github/templates/macos_ci_workflow.yml.j2
+++ b/.github/templates/macos_ci_workflow.yml.j2
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: !{{ runner_type }}
     steps:
-      - name: my thing
+      - name: my 2thing
         uses: driazati/test-action@master
         with:
           who-to-greet: ${{ secrets.SCCACHE_AWS_ACCESS_KEY_ID }}
