--- a/.github/templates/pull.yml.j2
+++ b/.github/templates/pull.yml.j2
@@ -1,13 +1,48 @@
-name: Lint
+{% import 'common.yml.j2' as common %}
+
+{%- block name -%}
+# Template is at:    .github/templates/pull.yml.j2
+# Generation script: .github/scripts/generate_ci_workflows.py
+name: pull
+{%- endblock %}
 
 on:
+  pull_request:
   push:
     branches:
       - master
-  pull_request:
+      - release/*
+      - fbsync
+
+!{{ common.concurrency("pull") }}
 
 jobs:
-  quick-checks:
+  test-tools:
+    if: ${{ github.repository == 'pytorch/pytorch' }}
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.6 - 3.9'
+          architecture: x64
+      - name: Checkout PyTorch
+        uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
+        with:
+          fetch-depth: 0 # deep clone, to allow us to use git log
+      - name: Install dependencies
+        # mypy and boto3 versions copied from
+        # .circleci/docker/common/install_conda.sh
+        run: |
+          set -eux
+          pip install -r requirements.txt
+          pip install boto3==1.16.34
+          make setup_lint
+      - name: Test tools
+        run: python -m unittest discover -vs tools/test -p 'test_*.py'
+
+  # LINT JOBS
+  lint-quick-checks:
     runs-on: ubuntu-18.04
     steps:
       - name: Setup Python
@@ -23,7 +58,7 @@ jobs:
       - name: Ensure consistent CircleCI YAML config
         if: ${{ always() && steps.requirements.outcome == 'success' }}
         run: cd .circleci && ./ensure-consistency.py
-      - name: Lint native_functions.yaml
+      - name: lint native_functions.yaml
         if: ${{ always() && steps.requirements.outcome == 'success' }}
         run: |
           pip3 install ruamel.yaml==0.17.4 --user
@@ -108,7 +143,7 @@ jobs:
           python3 -m pip install boto3==1.19.12
           .github/scripts/lint_test_ownership.py
 
-  clang-format:
+  lint-clang-format:
     runs-on: ubuntu-18.04
     if: ${{ github.event_name == 'pull_request' }}
     steps:
@@ -148,7 +183,7 @@ jobs:
           echo "$GIT_DIFF"
           exit 1
 
-  py2-setup-validate-errormsg:
+  lint-py2-setup-validate-errormsg:
     runs-on: ubuntu-18.04
     steps:
       - name: Setup Python
@@ -167,7 +202,7 @@ jobs:
       - name: Keep torch.utils.collect_env python2 compliant
         run: python2 -m py_compile torch/utils/collect_env.py
 
-  shellcheck:
+  lint-shellcheck:
     runs-on: ubuntu-18.04
     steps:
       - name: Setup Python
@@ -246,7 +281,7 @@ jobs:
           ./actionlint --color
           rm actionlint
 
-  toc:
+  lint-toc:
     runs-on: ubuntu-18.04
     # https://github.com/actions/virtual-environments/issues/599#issuecomment-602754687
     env:
@@ -282,7 +317,7 @@ jobs:
             false
           fi
 
-  flake8-py3:
+  lint-flake8-py3:
     runs-on: ubuntu-18.04
     steps:
       - name: Setup Python
@@ -342,8 +377,8 @@ jobs:
           commit_sha: ${{ github.event.pull_request.head.sha }}
           mode: json
 
-  clang-tidy:
-    runs-on: linux.2xlarge
+  lint-clang-tidy:
+    runs-on: [self-hosted, linux.2xlarge]
     container:
       # ubuntu20.04-cuda11.2-py3.8-tidy11
       image: ghcr.io/pytorch/cilint-clang-tidy:d8f0c777964d0dd8a147360de80aed1a13eb613a
@@ -431,7 +466,7 @@ jobs:
           commit_sha: ${{ github.event.pull_request.head.sha }}
           mode: json
 
-  cmakelint:
+  lint-cmakelint:
     runs-on: ubuntu-18.04
     steps:
       - name: Setup Python
@@ -453,7 +488,7 @@ jobs:
           grep -E -z -v '^(cmake/Modules/|cmake/Modules_CUDA_fix/|cmake/Caffe2Config.cmake.in|aten/src/ATen/ATenConfig.cmake.in|cmake/Caffe2ConfigVersion.cmake.in|cmake/TorchConfig.cmake.in|cmake/TorchConfigVersion.cmake.in|cmake/cmake_uninstall.cmake.in)' | \
           xargs -0 cmakelint --config=.cmakelintrc --spaces=2 --quiet
 
-  mypy:
+  lint-mypy:
     runs-on: ubuntu-18.04
     steps:
       - name: Setup Python
@@ -494,6 +529,6 @@ jobs:
             false
           fi
 
-concurrency:
-  group: lint-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
-  cancel-in-progress: true
+{% for job in jobs -%}
+    {%- include job.template %}
+{% endfor %}
