set DOCKER_HOST

--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -107,6 +107,8 @@ concurrency:
         run: |
           rm -rf "${GITHUB_WORKSPACE:?}/*"
           rm -f ~/.ssh/authorized_keys
+      - name: Set DOCKER_HOST
+        run: echo "DOCKER_HOST=unix:///run/user/$(id -u)/docker.sock" >> $GITHUB_ENV
       - name: Preserve github env variables for use in docker
         run: |
           env | grep '^GITHUB' > "/tmp/github_env_${GITHUB_RUN_ID}"
