Update base for Update on ".ci: Add nightly trigger, remove CircleCI linux binary builds"
Adds nightly trigger for github actions using a workflow that will pull
down viable/strict and tag it as `nightly` and then re-push it up to the
repository.

Also removes CircleCI linux binary builds since they will now be
outmoded in favor of our new GHA workflow

Signed-off-by: Eli Uriegas <eliuriegasfb.com>

[ghstack-poisoned]

--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -234,11 +234,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
